--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     // Navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
 
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.1'
