--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,20 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "environment"
+    productFlavors {
+        dev {
+            dimension "environment"
+            applicationIdSuffix ".dev"
+            buildConfigField("String", "API_BASE_URL", "\"http://10.0.2.2:3000/\"")
+        }
+        prod {
+            dimension "environment"
+            buildConfigField("String", "API_BASE_URL", "\"https://TODO/\"")
+        }
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -57,18 +71,28 @@ dependencies {
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
 
-    // Navigation
-    implementation "androidx.navigation:navigation-compose:2.5.3"
-
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-
     implementation 'androidx.core:core-ktx:1.9.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.1'
+
+    // UI With Compose
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.compose.material3:material3'
+
+    // Navigation with Navigation Component for Copmose
+    implementation "androidx.navigation:navigation-compose:2.5.3"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+
+    // Networking with Retrofit
+    implementation "com.squareup.retrofit2:retrofit:2.9.0" // retrofit for api wrapping
+    implementation "com.squareup.retrofit2:converter-moshi:2.9.0" // moshi for parsing/serialization
+
+    // MVVM implemented with ViewModel
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
+    implementation 'androidx.activity:activity-compose:1.6.1'
+
+    // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
