--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.4.0'
     }
     packagingOptions {
         resources {
@@ -67,9 +67,12 @@ dependencies {
     implementation(composeBom)
     androidTestImplementation(composeBom)
 
+    // Structures Concurrency with coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
     // Dependency Injection with Hilt
-    implementation "com.google.dagger:hilt-android:2.44"
-    kapt "com.google.dagger:hilt-compiler:2.44"
+    implementation "com.google.dagger:hilt-android:2.44.2"
+    kapt "com.google.dagger:hilt-compiler:2.44.2"
 
     implementation 'androidx.core:core-ktx:1.9.0'
 
@@ -86,9 +89,11 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:2.9.0" // retrofit for api wrapping
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0" // moshi for parsing/serialization
 
-    // MVVM implemented with ViewModel
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+    // lifecycle management with jetpack
+    def lifecycleVersion = '2.6.0-alpha05'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycleVersion"
 
     implementation 'androidx.activity:activity-compose:1.6.1'
 
