--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.compose.material3:material3'
+    implementation "androidx.compose.material:material-icons-extended:1.3.1"
 
     // Navigation with Navigation Component for Copmose
     implementation "androidx.navigation:navigation-compose:2.5.3"
