--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.4.0'
@@ -81,8 +82,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.compose.material3:material3'
     implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    implementation "androidx.compose.ui:ui-viewbinding"
 
-    // Navigation with Navigation Component for Copmose
+    // Navigation with Navigation Component for Compose
     implementation "androidx.navigation:navigation-compose:2.5.3"
     implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 
@@ -91,12 +93,16 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0" // moshi for parsing/serialization
 
     // lifecycle management with jetpack
-    def lifecycleVersion = '2.6.0-alpha05'
+    def lifecycleVersion = '2.6.0-beta01'
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-runtime-compose:$lifecycleVersion"
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycleVersion"
 
+    // Maps with Mapbox
+    implementation 'com.mapbox.maps:android:10.11.0'
+
     implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
