--- a/app/build.gradle
+++ b/app/build.gradle
@@ -80,7 +80,7 @@ dependencies {
     // UI With Compose
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
     implementation "androidx.compose.material:material-icons-extended:1.3.1"
     implementation "androidx.compose.ui:ui-viewbinding"
 
