--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
     implementation "androidx.compose.material:material-icons-extended:1.3.1"
+    implementation "androidx.compose.material:material:1.3.1"
     implementation "androidx.compose.ui:ui-viewbinding"
 
     // Navigation with Navigation Component for Compose
