--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     // Logging with Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
 
+    // Memory Leak Monitoring with LeakCanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.10'
+
     // Testing
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
