--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.appcompat:appcompat-resources:1.6.1'
     def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
     implementation(composeBom)
     androidTestImplementation(composeBom)
