--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,10 @@ plugins {
     id 'com.google.dagger.hilt.android'
 }
 
+def keysPropertiesFile = rootProject.file("keys.properties")
+def keysProperties = new Properties()
+keysProperties.load(new FileInputStream(keysPropertiesFile))
+
 android {
     namespace 'com.example.smallworld'
     compileSdk 33
@@ -20,6 +24,8 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        buildConfigField("String", "MAPBOX_ACCESS_TOKEN", keysProperties["MAPBOX_ACCESS_TOKEN"])
     }
 
     buildTypes {
@@ -31,14 +37,15 @@ android {
 
     flavorDimensions "environment"
     productFlavors {
-        dev {
+        local {
             dimension "environment"
             applicationIdSuffix ".dev"
-            buildConfigField("String", "API_BASE_URL", "\"http://10.0.2.2:3000/\"")
+            // change value here to http://localhost:3000 if not running from an emulator
+            buildConfigField("String", "API_BASE_URL", "\"http://10.0.2.2:3000\"")
         }
-        prod {
+        dev {
             dimension "environment"
-            buildConfigField("String", "API_BASE_URL", "\"https://TODO/\"")
+            buildConfigField("String", "API_BASE_URL", "\"https://smallworld.herokuapp.com\"")
         }
     }
 
@@ -64,21 +71,24 @@ android {
 }
 
 dependencies {
+    // Core Dependencies
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation 'androidx.appcompat:appcompat-resources:1.6.1'
-    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
-    implementation(composeBom)
-    androidTestImplementation(composeBom)
+    implementation 'androidx.core:core-ktx:1.9.0'
 
-    // Structures Concurrency with coroutines
+    // Structured Concurrency with coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
 
     // Dependency Injection with Hilt
     implementation "com.google.dagger:hilt-android:2.44.2"
     kapt "com.google.dagger:hilt-compiler:2.44.2"
 
-    implementation 'androidx.core:core-ktx:1.9.0'
-
     // UI With Compose
+    // Using the Comnpose Bill of Materials: https://developer.android.com/jetpack/compose/bom
+    def composeBom = platform('androidx.compose:compose-bom:2023.01.00')
+    implementation(composeBom)
+    androidTestImplementation(composeBom)
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
     implementation 'androidx.compose.material3:material3:1.1.0-alpha06'
@@ -105,9 +115,6 @@ dependencies {
 
     // Location with Google Play Services Fused Location Provider
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation "androidx.fragment:fragment-ktx:1.5.5"
 
     // Logging with Timber
     implementation 'com.jakewharton.timber:timber:5.0.1'
